--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
     <string name="app_name">VinylsAppG21</string>
-    <string name="title_activity_albums">Albums</string>
+    <string name="title_activity_albums">Álbums</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Vinilos App</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
-    <string name="menu_albums">Albums</string>
+    <string name="menu_albums">Álbums</string>
     <string name="menu_artists">Artistas</string>
     <string name="menu_collectors">Coleccionistas</string>
+    <string name="btn_new_album">NUEVO ÁLBUM</string>
+    <string name="albums_fragment_desc">Encuentra tu álbum favorito</string>
 </resources>
