--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,10 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="menu_albums">Álbums</string>
+    <string name="title_artists">Artistas</string>
     <string name="menu_artists">Artistas</string>
     <string name="menu_collectors">Coleccionistas</string>
     <string name="btn_new_album">NUEVO ÁLBUM</string>
     <string name="albums_fragment_desc">Encuentra tu álbum favorito</string>
+    <string name="artists_fragment_desc">Encuentra tu artista favorita</string>
 </resources>
