--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
     <string name="menu_collectors">Coleccionistas</string>
     <string name="btn_new_album">NUEVO ÁLBUM</string>
     <string name="albums_fragment_desc">Encuentra tu álbum favorito</string>
-    <string name="artists_fragment_desc">Encuentra tu artista favorita</string>
+    <string name="artists_fragment_desc">Encuentra tu artista favorito</string>
 </resources>
