--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="btn_new_album">NUEVO ÁLBUM</string>
     <string name="albums_fragment_desc">Encuentra tu álbum favorito</string>
     <string name="artists_fragment_desc">Encuentra tu artista favorito</string>
+    <string name="birthday_artist_desc">Fecha de nacimiento</string>
+    <string name="details_artist_desc">Descripción</string>
+    <string name="albums_artist_desc">Albumes</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
