--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="artists_fragment_desc">Encuentra tu artista favorito</string>
     <string name="album_lbl_releaseDate">Fecha de lanzamiento</string>
     <string name="album_lbl_genre">Género</string>
-    <string name="album_lbl_recordBrand">Sello discográfico</string>
+    <string name="album_lbl_recordLabel">Sello discográfico</string>
     <string name="album_lbl_desCoverImg">Portada del álbum</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
