--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="album_lbl_desCoverImg">Portada del álbum</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="artist_detail_desc">Descripción</string>
+    <string name="buscarString">Buscar</string>
 </resources>
