--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="title_artists">Artistas</string>
     <string name="menu_artists">Artistas</string>
     <string name="menu_collectors">Coleccionistas</string>
+    <string name="btn_new_artista">NUEVO ARTISTA</string>
     <string name="btn_new_album">NUEVO ÁLBUM</string>
     <string name="albums_fragment_desc">Encuentra tu álbum favorito</string>
     <string name="artists_fragment_desc">Encuentra tus artistas preferidos</string>
