--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,11 @@
 <resources>
-    <string name="app_name">VinylsAppG21</string>
+    <string name="app_name">Vinilos App</string>
     <string name="body_landing">Ingresar Como</string>
     <string name="visitor"><b>VISITANTE</b></string>
     <string name="collector"><b>COLECCIONISTA</b></string>
-    <string name="button_iniciar"><b>Iniciar</b></string>
     <string name="title_activity_albums">Álbums</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Vinilos App</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="menu_albums">Álbums</string>
@@ -17,5 +14,15 @@
     <string name="menu_collectors">Coleccionistas</string>
     <string name="btn_new_album">NUEVO ÁLBUM</string>
     <string name="albums_fragment_desc">Encuentra tu álbum favorito</string>
-    <string name="artists_fragment_desc">Encuentra tu artista favorito</string>
+    <string name="artists_fragment_desc">Encuentra tus artistas preferidos</string>
+    <string name="birthday_artist_desc">Fecha de nacimiento</string>
+    <string name="albums_artist_desc">Albumes</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="album_lbl_releaseDate">Fecha de lanzamiento</string>
+    <string name="album_lbl_genre">Género</string>
+    <string name="album_lbl_recordLabel">Sello discográfico</string>
+    <string name="album_lbl_desCoverImg">Portada del álbum</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="artist_detail_desc">Descripción</string>
+    <string name="buscarString">Buscar</string>
 </resources>
