--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,23 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="artist_detail_desc">Descripción</string>
     <string name="buscarString">Buscar</string>
+    <string name="albumName">Nombre del Álbum</string>
+    <string name="newAlbumNameHint">Nombre del Nuevo Álbum</string>
+    <string name="album_lbl_coverURL">Portada del álbum</string>
+    <string-array name="Genres">
+        <item>Classical</item>
+        <item>Salsa</item>
+        <item>Rock</item>
+        <item>Folk</item>
+    </string-array>
+    <string-array name="RecordLabels">
+        <item>Sony Music</item>
+        <item>EMI</item>
+        <item>Discos Fuentes</item>
+        <item>Elektra</item>
+        <item>Fania Records</item>
+    </string-array>
+    <string name="album_description">Descripción</string>
+    <string name="newAlbumSave">Guardar</string>
+    <string name="newAlbumNewTrack">Nuevo track</string>
 </resources>
