--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="artist_detail_desc">Descripción</string>
     <string name="buscarString">Buscar</string>
+    <string name="collector_tel_desc">Teléfono:</string>
+    <string name="collector_email_desc">Email:</string>
+    <string name="collector_albumes_desc">Álbumes</string>
 </resources>
