Versión base crear álbum

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="album_description">Descripción</string>
     <string name="newAlbumSave">Guardar</string>
     <string name="newAlbumNewTrack">Nuevo track</string>
+    <string name="contDesc_appLogo">Logo dela aplicación: disco de vinilo</string>
+    <string name="contDesc_visitorButton">Ingreso a la aplicación con el rol visitante</string>
+    <string name="contDesc_collectorButton">Ingreso a la aplicación con el rol coleccionista</string>
 </resources>
